sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: not found: value x
      for (y<- 0 to 8-x){
                      ^